tests/lime/fail/args/macro_keyword.wsa
macro call [push 1]
